--- a/06_Paper/COG-ED/Stage 2/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Stage 2/Manuscript.Rmd
@@ -380,7 +380,7 @@ The declining logistic contrast had the highest effect estimate (`r apa_print(em
 
 Consequently, we had to adapt the multi level model to incorporate this non-linear trend.
 To apply the contrast to the *n*-back levels, we had to turn the variables into a factor, with two consequences:
-Centered variables cannot be turned into factors, so we entered the variables in their raw form, and factors cannot be used as random slopes, so the model is now defined as:
+Centered variables cannot be turned into factors, so we entered the variable level in its raw form, and factors cannot be used as random slopes, so the model is now defined as:
 $$
 SV \sim level\ + d' + median RT + (1|subject)
 $$
@@ -396,7 +396,7 @@ kable(h2b_result.table,
         caption = "Results of the multi level model on the influence of n-back level (as a declining logistic contrast) and task performance on subjective values.",
         booktabs = T,                          # no vertical lines
         escape = F,                            # correctly print special characters)
-        align = c("l",rep("r",6))) %>%         # right aligns the text in every numerical column
+        align = c("l",rep("r",7))) %>%         # right aligns the text in every numerical column
     kable_styling(latex_options = c("striped")) %>%
     footnote(general = "$SE$ = standard error, $df$ = degrees of freedom, $SD$ = standard deviation.",
              escape = F,                    # correctly print special characters
@@ -406,6 +406,7 @@ kable(h2b_result.table,
 The model had an effect size of $f^{2}=$`r round(h2b_level_f2, digits = 2)` for the *n*-back levels and $f^{2}=$`r round(h2b_dprime_f2, digits = 2)` for *d'*, which are considered large and small, respectively [@Cohen1992].
 This means that the *n*-back level explained `r paste0(formatC(h2b_level_f2 * 100, format = "f", digits = 2), "%")` and *d'* explained `r paste0(formatC(h2b_dprime_f2 * 100, format = "f", digits = 2), "%")` of variance in SVs relative to the unexplained variance, respectively.
 The effect size of the median RT was $f^{2}=$`r format(round(h2b_medianRT_f2, digits = 2), nsmall = 2)`.
+The beta coefficients indicated that with every *n*-back level, the SV decreased by `r as.numeric(h2b_result.table[2,"Beta"])`, and for every 1-unit increase in *d'*, the SV increased by `r as.numeric(h2b_result.table[3,"Beta"])`.
 
 To investigate the dependency of the model results on the RT preprocessing, we conducted a specification curve analysis (Figure\ \@ref(fig:sca-plot)).
 
@@ -493,7 +494,8 @@ The MLM with the logistic contrast showed that the *n*-back level explained the 
 In both cases, the SVs decreased when the value of the predictor increased.
 The median RT was not a significant predictor in this model, which was somewhat surprising because RT but not *d'* yielded significant differences across levels in the manipulation checks.
 However, participants might have deliberately or subconsciously used the feedback they received at the end of each round, i.e. twice per *n*-back level, as an anchor during the effort discounting.
-This feedback was based on correct responses and not on RT, so if participants based their effort discounting choices at least partly on this feedback, they were either motivated to repeat a task in which they perform well and/or they were reluctant to accept a larger reward for a task in which they did not perform well.
+This feedback was based on correct responses and not on RT, so if participants based their effort discounting choices at least partly on this feedback, they were either motivated to repeat a task in which they performed well and/or they were reluctant to accept a larger reward for a task in which they did not perform well.
+Since more participants reported effort avoidance as their motivation in the effort discounting than those who reported seeking a challenge, we can assume that they were more motivated to repeat a task in which they performed well because their good performance coincided with low effort.
 
 \newpage
 
