--- a/06_Paper/COG-ED/Stage 2/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Stage 2/Manuscript.Rmd
@@ -403,6 +403,8 @@ kable(h2b_result.table,
              threeparttable = T)            # line breaks in the footnote
 ```
 
+We used an ANOVA to compare the fit of the final model with a linear random intercept model.
+The two models were different from each other ($\chi^2(`r compare_h2b$Df[2]`)=compare_h2b$Chisq[2]$, $p<.001$), and with an Akaike Information Criterion of $AIC=`r compare_h2b$AIC[2]`$ and a Bayesian Information Criterion of $BIC=`r compare_h2b$BIC[2]`$ the declining logistic model is superior to the linear model ($AIC=`r compare_h2b$AIC[1]`$, $BIC=`r compare_h2b$BIC[1]`$).
 The model had an effect size of $f^{2}=$`r round(h2b_level_f2, digits = 2)` for the *n*-back levels and $f^{2}=$`r round(h2b_dprime_f2, digits = 2)` for *d'*, which are considered large and small, respectively [@Cohen1992].
 This means that the *n*-back level explained `r paste0(formatC(h2b_level_f2 * 100, format = "f", digits = 2), "%")` and *d'* explained `r paste0(formatC(h2b_dprime_f2 * 100, format = "f", digits = 2), "%")` of variance in SVs relative to the unexplained variance, respectively.
 The effect size of the median RT was $f^{2}=$`r format(round(h2b_medianRT_f2, digits = 2), nsmall = 2)`.
@@ -445,13 +447,7 @@ Post-hoc tests showed that the difference between the SVs of 2- and 3-back is sl
 This means that across the whole sample, there was a steeper decline in SVs from 2- to 3-back than from 1- to 2-back, but some participants showed a completely opposite pattern.
 
 INSERT FIGURE 4 HERE
-<!--
-```{r h3a-plot, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Difference scores in the subjective values of 1- minus 2-back and of 2- minus 3-back.", fig.pos="H"} 
-  
-  include_graphics(here("06_Paper", "COG-ED", "Stage 2", "Figures", "h3a-plot.png"))
 
-```
--->
 
 The rmANOVA on the association between NFC scores and NASA-TLX scores revealed a main effect of *n*-back level (`r apa_print(hypothesis3b_model)$full_result$level`, $BF10=$`r round(BayesFactor::extractBF(hypothesis3b_BF_levels)$bf[1], digits = 2)`) and an interaction between *n*-back level and NFC scores (`r apa_print(hypothesis3b_model)$full_result$nfcmedian_level`), but no main effect of NFC scores (`r apa_print(hypothesis3b_model)$full_result$nfcmedian`, $BF10=$`r round(BayesFactor::extractBF(hypothesis3b_BF_levels)$bf[2], digits = 2)`).
 Post-hoc tests showed that the participants with NFC scores below the median had higher NASA-TLX scores for 3-back (`r apa_print(pairs(hypothesis3b_emm_interact))$full_result$X3_High_low`, `r apa_print(BayesFactor::ttestBF(x = h3b_data$ntlx[h3b_data$nfcmedian == "low" & h3b_data$level == 3], y = h3b_data$ntlx[h3b_data$nfcmedian == "high" & h3b_data$level == 3], progress = FALSE, paired = FALSE))$statistic`) and for 4-back (`r apa_print(pairs(hypothesis3b_emm_interact))$full_result$X4_High_low`, `r apa_print(BayesFactor::ttestBF(x = h3b_data$ntlx[h3b_data$nfcmedian == "low" & h3b_data$level == 4], y = h3b_data$ntlx[h3b_data$nfcmedian == "high" & h3b_data$level == 4], progress = FALSE, paired = FALSE))$statistic`) than those with NFC scores above the median.
