--- a/06_Paper/COG-ED/Stage 2/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Stage 2/Manuscript.Rmd
@@ -405,7 +405,7 @@ kable(h2b_result.table,
 
 We used an ANOVA to compare the fit of the final model with a linear random intercept model.
 The two models were different from each other ($\chi^2(`r compare_h2b$Df[2]`)=compare_h2b$Chisq[2]$, $p<.001$), and with an Akaike Information Criterion of $AIC=`r compare_h2b$AIC[2]`$ and a Bayesian Information Criterion of $BIC=`r compare_h2b$BIC[2]`$ the declining logistic model is superior to the linear model ($AIC=`r compare_h2b$AIC[1]`$, $BIC=`r compare_h2b$BIC[1]`$).
-The model had an effect size of $f^{2}=$`r round(h2b_level_f2, digits = 2)` for the *n*-back levels and $f^{2}=$`r round(h2b_dprime_f2, digits = 2)` for *d'*, which are considered large and small, respectively [@Cohen1992].
+The final model had an effect size of $f^{2}=$`r round(h2b_level_f2, digits = 2)` for the *n*-back levels and $f^{2}=$`r round(h2b_dprime_f2, digits = 2)` for *d'*, which are considered large and small, respectively [@Cohen1992].
 This means that the *n*-back level explained `r paste0(formatC(h2b_level_f2 * 100, format = "f", digits = 2), "%")` and *d'* explained `r paste0(formatC(h2b_dprime_f2 * 100, format = "f", digits = 2), "%")` of variance in SVs relative to the unexplained variance, respectively.
 The effect size of the median RT was $f^{2}=$`r format(round(h2b_medianRT_f2, digits = 2), nsmall = 2)`.
 The beta coefficients indicated that with every *n*-back level, the SV decreased by `r as.numeric(h2b_result.table[2,"Beta"])`, and for every 1-unit increase in *d'*, the SV increased by `r as.numeric(h2b_result.table[3,"Beta"])`.
@@ -415,7 +415,7 @@ To investigate the dependency of the model results on the RT preprocessing, we c
 INSERT FIGURE 2 HERE
 ```{r sca-plot, echo=FALSE, message=FALSE, warning=FALSE, fig.cap="Results of the multi level model for each of the 63 preprocessing pipelines. The lower panel indicates the type of preprocessing, the upper panel shows the beta coefficient of each predictor and its p-value. The colourbar indicates the BF10. The pipelines are sorted in descending order of the magnitude of the n-back level beta.", fig.pos="H"} 
   
-  include_graphics(here("06_Paper", "COG-ED", "Stage 2", "Figures", "sca-plot.png"))
+  #include_graphics(here("06_Paper", "COG-ED", "Stage 2", "Figures", "sca-plot.png"))
 
 ```
 
