--- a/06_Paper/COG-ED/Stage 2/CAD.bib
+++ b/06_Paper/COG-ED/Stage 2/CAD.bib
@@ -924,4 +924,17 @@
   publisher = {Frontiers Media {SA}},
 }
 
+@Article{Fernandez2020,
+  author    = {Luis Mor{\'{\i}}s Fern{\'{a}}ndez and Miguel A. Vadillo},
+  journal   = {Royal Society Open Science},
+  title     = {Flexibility in reaction time analysis: many roads to a false positive?},
+  year      = {2020},
+  month     = {feb},
+  number    = {2},
+  pages     = {190831},
+  volume    = {7},
+  doi       = {10.1098/rsos.190831},
+  publisher = {The Royal Society},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
