set papaja na options

--- a/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
@@ -16,6 +16,8 @@ library(tidyverse)
 # load workspace variables from analyses_ERED.R script
 base::load(here("06_Paper","ER-ED","ERED_Stage2","Workspace_ERED_pilot.RData"))
 base::load(here("06_Paper","ER-ED","ERED_Stage2","Workspace_ERED.RData"))
+
+options(papaja.na_string = "")
 ```
 
 # 3. Results
