--- a/06_Paper/ER-ED/ERED_Stage2/Supplement.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Supplement.Rmd
@@ -96,21 +96,24 @@ papaja::apa_table(
   SubjArousalReg_con,
   caption = "Post-hoc tests for effects of ER strategies on subjective arousal ratings.",
   escape = FALSE,
-  placement = "H"
+  placement = "H",
+  font_size = "footnotesize"
   ) 
 
 papaja::apa_table(
   EMGCorrReg_con,
   caption = "Post-hoc tests for effects of ER strategies on Corrugator activity",
   escape = FALSE,
-  placement = "H"
+  placement = "H",
+  font_size = "footnotesize"
   )
 
 papaja::apa_table(
   EMGLevReg_con,
   caption = "Post-hoc tests for effects of ER strategies on Levator activity",
   escape = FALSE,
-  placement = "H"
+  placement = "H",
+  font_size = "footnotesize"
   )
 
 ```
