--- a/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
@@ -59,6 +59,7 @@ Moreover, we found significantly lower effort during suppression compared with d
 Individual SVs could be determined for `r nrow(data_SV)/3` participants for all three ER strategies.
 SVs ranged between `r papaja::apa_num(min(data_SV$sv), digits = 3)` and `r papaja::apa_num(max(data_SV$sv))`.
 In sum, $n=$ `r  papaja::printnum(sum(data_SV$sv == 1))` had a SVs of 1.0, indicating a clear preference for one ER strategy.
+Absolute preferences for ER strategies were relatively equally distributed.
 Highest SV for distraction was reported by $n=$ `r  papaja::printnum(sum(data_SV$strat_c[data_SV$strategy == "distraction"] == -1))`, for distancing by $n=$ `r  papaja::printnum(sum(data_SV$strat_c[data_SV$strategy == "distancing"] == -1))`, and for suppression by $n=$ `r papaja::printnum(sum(data_SV$strat_c[data_SV$strategy == "distancing"] == -1))`.
 
 To investigate, which variables can predict individual SVs of ER strategies, a multilevel model approach was chosen.
@@ -74,9 +75,11 @@ SV \sim \text{effort rating} + \text{arousal rating} + \text{utility rating} + c
 $$ 
 
 The second model explained `r papaja::printnum(MLM2_r2[2])` percent of variance. 
-All results of the second model are in table\ \@ref(tab:TabMLM_H5).
+All results of the second model are in table\ \@ref(tab:TabMLMH5).
 
-``` {r TabMLM_H5, echo=FALSE, message=FALSE, warning=FALSE}
+[INSERT TABLE 1 HERE]
+
+``` {r TabMLMH5, echo=FALSE, message=FALSE, warning=FALSE}
 papaja::apa_table(
   H5_M2_table,
   caption = "Results of multilevel model predicting subjective values of ER strategies.",
